# BodyTracking

./: .gitignore  README.md
AC_Evaluation/: A02850.json  ComponentExtractor.cp36-win_amd64.pyd  H03446.json  LabelMeFileIO.py  M01_ARAPDeformation.py  M01_BackgroundSubtraction.py  M02_ImagesToVideo.py  M02_ObjConverter.py  M03_SIlhouetteComparison.py  QuadLabels.py  S01_GenOpticalFlow.py  S01_GenOpticalFlow_2.py  S02_DrawAvgFlopMagCurve.py  S03_BackgroundSubtraction.py  S04_2_SilhouetteAccuracy.py  S04_SilhouetteAccuracy.py  S05_FItOnlyToKp.py  S06_2_RenderSilhouettesMultiFrames.py  S06_RenderSilhouettes.py  S07_CompareSilhouettes.py  S08_RenderAndCompareSilhouettes.py  S09_CopyMeshFIlesInDifferentStages.py  S10_CopyMeshFIlesInDifferentStages.py  S10_GenRefSilhouettes.py  S11_RenderImagesMultiFrames.py  S12_ReprojectionErr.py  S13_AddGround.py  S14_DifferentReconScheme.py  S15_ReprojectionErrComparison.py  S16_AnalyzeErrComparison.py  S17_EvaluateCornerdet.py  S18_EvaluateRejector.py  S19_EvaluateRecogNet.py  S20_StatisticsOnOpticalFlow.py  S21_Copy2DPipelineData.py  S22_Actortuning_transition.py  S23_ActorTuning_CompareSeq_2_AddErrors.py  S24_CalibrationErrs.py  S25_EvaluateActorTuning.py  S26_Overlay.py  (+15 more)
AC_Evaluation/QuadProposals/QuadGeneratorCPP_/: CMakeLists.txt  main.cpp
AC_FitPipeline/: BodyInView.ply  BodyInView_Calibration.ply  BodyInView_LookAt.ply  Config.py  FacesOnlySuit.json  HandIndices.ini  HandIndices.json  HeadIndices.ini  InterpolateRestposeFleshDeformationDisplacement.py  Logger.py  M01_Preprocessing.py  M03_ToSparseFitting.py  M04_ObjConverter.py  (+35 more)
(+1069 files in other folders)
